--- a/rebar.test.config
+++ b/rebar.test.config
@@ -25,12 +25,12 @@
 %%
 %% ----------------------------------------------------------------------------
 
-{application, lager_backends,
- [ {description,  "Custom backends for lager"}
- , {vsn,          "0.1.0"}
- , {registered,   []}
- , {applications, [kernel, stdlib]}
- , {env,          []}
- , {modules,      []}
- ]
-}.
+{erl_opts,            [debug_info, nowarn_shadow_vars, warnings_as_errors]}.
+{xref_checks,         [undefined_function_calls, exports_not_used]}.
+{cover_enabled,       true}.
+{cover_print_enabled, true}.
+{deps,
+  [ {lager,   ".*", {git, "git@github.com:basho/lager.git",  {branch, "master"}}}
+  , {stdlib2, ".*", {git, "git@github.com:kivra/stdlib2",    {branch, "master"}}}
+  , {shaft,   ".*", {git, "git@github.com:b3rnie/shaft.git", {branch, "master"}}}
+]}.
